--- a/devfile.yaml
+++ b/devfile.yaml
@@ -10,21 +10,22 @@ attributes:
   controller.devfile.io/scc: container-build
   controller.devfile.io/storage-type: ephemeral
 components:
-  - container:
-      cpuLimit: '4'
-      cpuRequest: '500m'
-      image: registry.redhat.io/devspaces/udi-rhel8:latest
-      env:
-        - name: SSO_LOGIN_URL
-          value: 'https://footlocker.login.apigee.com'
-      volumeMounts:
-        - name: flair
-          path: /home/user/flair
-      mountSources: true
-      sourceMapping: /projects
-  - name: flair
-    volume:
-      size: 3G
+  - name: tools
+      container:
+        cpuLimit: '4'
+        cpuRequest: '500m'
+        image: registry.redhat.io/devspaces/udi-rhel8:latest
+        env:
+          - name: SSO_LOGIN_URL
+            value: 'https://footlocker.login.apigee.com'
+        volumeMounts:
+          - name: flair
+            path: /home/user/flair
+        mountSources: true
+        sourceMapping: /projects
+    - name: flair
+      volume:
+        size: 3G
 commands:
   - id: init-setup
     exec:
