--- a/devfile.yaml
+++ b/devfile.yaml
@@ -13,7 +13,7 @@ components:
   - name: tools
     container:
        cpuLimit: '4'
-       cpuRequest: '500m'
+       cpuRequest: '3'
        image: registry.redhat.io/devspaces/udi-rhel8:latest
        env:
          - name: SSO_LOGIN_URL
